infra/k8s/apps/payment-gateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payment-gateway
  namespace: showcase
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: payment-gateway
  port:
    targetPort: http
